--- a/index.html
+++ b/index.html
@@ -15,17 +15,24 @@
 			<form method="post" action="script.php">
 				<fieldset>
 					<legend>Personne recherchée</legend>
-					<p>
-						<label for="nom">Votre nom : </label><input type="text" name="nom" placeholder="Nom" id="nom" size="30" maxlength="50" required="required" autofocus/>
-						<br/>
-						<label for="prenom">Votre prénom : </label><input type="text" name="prenom" placeholder="Prénom" id="prenom" size="30" maxlength="50" required="required"/>
-						<br/>
-						<input type="submit" value="Envoyer"/>
-					</p>
+						<div class="col-md-4">
+							<div class="form-group">
+								<label for="nom">Votre nom : </label>
+								<input type="text" name="nom" placeholder="Nom" id="nom" class="form-control" required="required" autofocus/>
+							</div>
+
+							<div class="form-group">
+								<label for="prenom">Votre prénom : </label>
+								<input type="text" name="prenom" placeholder="Prénom" id="prenom" class="form-control" required="required"/>
+							</div>
+
+							<button type="submit" class="btn btn-default">Envoyer</button>
+						</div>
 				</fieldset>
 			</form>
 		</section>
 		<footer>
+			<br />
 			<p>ARTCHOUNIN Daniel/ TCHANDJOU NGOKO Adrien</p>
 		</footer>
 	</body>
