load structure form with ajax

--- a/formulaire_structure.html
+++ b/formulaire_structure.html
@@ -7,22 +7,14 @@
 			</div>
 			<div class="panel-body">
 				<div class="form-group">
-					<select class="form-control">
+					<select class="form-control" id="selectPere">
 					  <option selected disabled>Sélectionner la structure</option>
-					  <option>1</option>
-					  <option>2</option>
-					  <option>3</option>
-					  <option>4</option>
 					</select>					
 				</div>
 
 				<div class="form-group">
-					<select class="form-control">
+					<select class="form-control" id="selectFils">
 					  <option selected disabled>--</option>
-					  <option>1</option>
-					  <option>2</option>
-					  <option>3</option>
-					  <option>4</option>
 					</select>
 				</div>
 				<button type="submit" class="btn btn-default ">Envoyer</button>
