--- a/formulaire_structure.html
+++ b/formulaire_structure.html
@@ -18,7 +18,7 @@
 					</select>
 				</div>
 				<button type="submit" class="btn btn-default ">Envoyer</button>
-				<div id="errorMsg"></div>
+				<div id="errorMsgFils"></div>
 			</div>
 		</div>
 	</form>
