Affichage de toutes les informations de toutes les personnes + gestion des erreurs HTTP + gestion des problèmes d'images.

--- a/formulaire_structure.html
+++ b/formulaire_structure.html
@@ -1,9 +1,9 @@
 <!-- Forumulaire pour recherche par structure -->
 <div role="tabpanel" class="tab-pane" id="structure">
-	<form method="post"> <!--Ajouter methode et fonction de validation-->
+	<form method="post" action="result.php" onSubmit=""> <!--Ajouter methode et fonction de validation-->
 		<div class="panel panel-default">
 			<div class="panel-heading" id="panel-heading-custom">
-				Recherchée par structure
+				Rechercher par structure
 			</div>
 			<div class="panel-body">
 				<div class="form-group">
