Modification du fichier 'formulaire_structure.html''

--- a/formulaire_structure.html
+++ b/formulaire_structure.html
@@ -7,13 +7,13 @@
 			</div>
 			<div class="panel-body">
 				<div class="form-group">
-					<select class="form-control" id="selectPere">
+					<select class="form-control" id="selectPere" name="selectPere">
 					  <option selected disabled>Sélectionner la structure</option>
 					</select>					
 				</div>
 
 				<div class="form-group">
-					<select class="form-control" id="selectFils">
+					<select class="form-control" id="selectFils" name="selectFils">
 					  <option selected disabled>--</option>
 					</select>
 				</div>
